adding to related works+minor

--- a/controllers.tex
+++ b/controllers.tex
@@ -29,6 +29,6 @@ Let $\set{\Sigma^i} $ be a set of control systems, $\tau >0$ be a given sampling
 A \emph{global} open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
 On the other hand, a set of \emph{local} open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$.
 
-\smallskip
-\noindent\textbf{Decentralized Control.}\
-Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
+%\smallskip
+%\noindent\textbf{Decentralized Control.}\
+%Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
