--- a/prelims.tex
+++ b/prelims.tex
@@ -71,7 +71,7 @@ if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 \smallskip
 \noindent\textbf{Product Control System.}\
 Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
-We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$), and angular speed ($\dot \theta$). The state space for the forklift is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&y_1+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&y_2\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
+We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$), and angular speed ($\dot \theta$). The state space for the forklift is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
 %For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
 We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq X^i$, $D(u,V) \coloneqq \inf_{v\in V}\|u-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
 We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$.
@@ -86,7 +86,7 @@ From here on, we will omit the domain of $i$ and will use ``$\set{S^i}$'' instea
 \subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ denote sampled time abstraction of a control system $\Sigma$ for a given sample time $\tau>0$. An open-loop controller of $\Sigma_\tau$ is a function $C\colon [0;T]\to U$ for some given time horizon $T>0$. The open-loop is obtained when we connect $C$ with $\Sigma_\tau$ serially (denoted by $C \triangleright \Sigma_\tau$). The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$. A feedback controller of $\Sigma_\tau$ is a function $C\colon X\to U$. The closed-loop is obtained when we connect $C$ with $\Sigma_\tau$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
 Let $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
 A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
-On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$.
+On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$. Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
 
 %here
 %\subsection{Abstraction-Based Controller Synthesis Background}
