--- a/references.bib
+++ b/references.bib
@@ -37,6 +37,21 @@
 	journal = {{IEEE} Transactions on Systems,  Man,  and Cybernetics}
 }
 
+@inproceedings{BanusicMPSZ19pgcd,
+	author    = {Gregor B. Banusic and
+	Rupak Majumdar and
+	Marcus Pirron and
+	Anne{-}Kathrin Schmuck and
+	Damien Zufferey},
+	title     = {{PGCD:} robot programming and verification with geometry, concurrency,
+	and dynamics},
+	booktitle = {Proceedings of the 10th {ACM/IEEE} International Conference on Cyber-Physical
+	Systems, {ICCPS} 2019, Montreal, QC, Canada, April 16-18, 2019},
+	pages     = {57--66},
+	publisher = {{ACM}},
+	year      = {2019}
+}
+
 @inproceedings{Chen2018cbf,
 	author    = {Ji Chen and
 	Salar Moarref and
@@ -180,6 +195,15 @@
 	pages     = {99--104},
 	publisher = {{ACM}},
 	year      = {2016}
+}
+
+@inproceedings{saha2016implan,
+	year = {2016},
+	month = apr,
+	publisher = {{IEEE}},
+	author = {Indranil Saha and Rattanachai Ramaithitima and Vijay Kumar and George J. Pappas and Sanjit A. Seshia},
+	title = {Implan: Scalable Incremental Motion Planning for Multi-Robot Systems},
+	booktitle = {2016 {ACM}/{IEEE} 7th International Conference on Cyber-Physical Systems ({ICCPS})}
 }
 
 @INPROCEEDINGS{Shahin2017cltl,
