--- a/experiments.tex
+++ b/experiments.tex
@@ -30,7 +30,7 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 			&$T_{AL}$&$|Domain|$&$T_{l}^{abs}$&$T_{l}^{syn}$&$T_g^{abs}$&$T_g^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $4\times 10^5$ & $91.0$  & $9.22$& $7.14\times 10^70$&OM&OM \\
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $4\times 10^5$ & $91.0$  & $9.22$& $7.14\times 10^{70}$&OM&OM \\
 			
 			\midrule
 			
