--- a/prelims.tex
+++ b/prelims.tex
@@ -20,7 +20,7 @@ Formally, \[\ball_\varepsilon(c)\coloneqq \set{x
 	\in \mathbb{R}^n \mid  |x-c|\leq \varepsilon }.\] 
 
 Let $A$ be a set.
-We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$. Finally, to define our control tasks, we use a subset of Linear Temporal Logic (LTL). In particular, we will use the until ($\mathcal{U}$) and next  ($\bigcirc$) operators. Let $p$ and $q$ be predicates, and $\rho=(x_0,x_1,\dots)$ be an infinite sequence of elements from $\reals^n$. We say that $\rho$ satisfies $\bigcirc p$ if $x_1\models p$ and we say $p\mathcal{U}q$ if there exists $i\in\mathbb{N}$ s.t. $x_i\models q$ and for all $0\leq j<i$, $x_j\models p$. For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles} and references therein.
+We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$. Finally, to define our control tasks, we use a subset of Linear Temporal Logic (LTL). In particular, we will use the until ($\mathcal{U}$) and next  ($\bigcirc$) operators. Let $p$ and $q$ be subsets of $\reals^n$, and $\rho=(x_0,x_1,\dots)$ be an infinite sequence of elements from $\reals^n$. We write $\rho\models\bigcirc p$ if $x_1\in p$ and similarly we write $\rho\models p\mathcal{U}q$ if there exists $i\in\mathbb{N}$ s.t. $x_i\in q$ and for all $0\leq j<i$, $x_j\in p$. For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles} and references therein.
 
 %Let $V$ be a finite set of real-valued variables.
 %We use the notation $\sem{V}$ (same symbol but in boldface blue) to denote the set of every possible valuations of the variables in $V$, i.e.\ an element in $\sem{V}$ assigns an unique real number to every variable in $V$.
