--- a/prelims.tex
+++ b/prelims.tex
@@ -83,7 +83,8 @@ Let $\set{S^i}_{i\in [1;N]}$, $S^i=(Z^i,z_\init^i,U^i,\delta^i)$, be a set of $N
 The \emph{product transition system of } $\set{S^i}_{i\in [1;N]}$ is the transition system $S^\times \coloneqq (Z^\times, z^\times, U^\times, \delta^\times)$ such that $Z^\times \coloneqq Z^1\times \ldots \times Z^N$, $z^\times_\init\coloneqq (z_\init^1,\ldots,z_\init^N)$, $U^\times \coloneqq U^1\times \ldots\times U^N$, and $\delta^\times \coloneqq \delta^1\otimes\ldots \otimes \delta^N$.
 From here on, we will omit the domain of $i$ and will use ``$\set{S^i}$'' instead of ``$\set{S^i}_{i\in [1;N]}$'' for simpler notation.
 
-\subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ denote sampled time abstraction of a control system $\Sigma$ for a given sample time $\tau>0$. An open-loop controller of $\Sigma_\tau$ is a function $C\colon [0;T]\to U$ for some given time horizon $T>0$. The open-loop is obtained when we connect $C$ with $\Sigma_\tau$ serially (denoted by $C \triangleright \Sigma_\tau$). The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$. A feedback controller of $\Sigma_\tau$ is a function $C\colon X\to U$. The closed-loop is obtained when we connect $C$ with $\Sigma_\tau$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
+\subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ denote sampled time abstraction of a control system $\Sigma$ for a given sample time $\tau>0$. An open-loop controller of $\Sigma_\tau$ is a function $C\colon [0;T]\to U$ for some given time horizon $T>0$. The open-loop is obtained when we connect $C$ with $\Sigma_\tau$ serially (denoted by $C \triangleright \Sigma_\tau$). %The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$.
+ A feedback controller of $\Sigma_\tau$ is a function $C\colon X\times[0;T]\to U$ for a given time horizon $T$. The closed-loop is obtained when we connect $C$ with $\Sigma_\tau$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
 Let $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
 A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
 On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$. Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
