--- a/problem.tex
+++ b/problem.tex
@@ -4,20 +4,17 @@
 \label{sec:problem}
 %\textcolor{blue}{
 In this paper, we consider the feedback controller synthesis problem for a heterogeneous swarm of $N$ different control systems.
-%The robots are modeled as nonlinear control systems subjected to disturbances.
-We assume that the systems are incapable of synchronizing their actions through communication among each other during run-time.
-
-We consider \emph{reach-avoid} specifications denoted as $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ with some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$. Now, let $\varepsilon\in \mathbb{R}^n_{>0}$ be a \emph{robustness margin}. We define a robust version of a given reach-avoid specification by $\Phi_\varepsilon=\lnot\avoid'\;\mathcal{U}\;\goal'$ with $\avoid'=\avoid'\oplus\ball_\varepsilon(0)$ and $\goal'=\goal\ominus\ball_\varepsilon(0)$, where $\oplus$ and $\ominus$ denote the Minkowski addition and diffrence, respectively. %Given a sampled-time abstraction product control system $\Sigma^\times_\tau$ and reach-avoid specification $\Phi$ defined over $X^\times$, we will say that decentralized open-
+Each system is modeled as a nonlinear control systems subjected to disturbances. We consider \emph{reach-avoid} specifications denoted as $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ with some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$. Now, let $\varepsilon\in \mathbb{R}^n_{>0}$ be a \emph{robustness margin}. We define a robust version of a given reach-avoid specification by $\Phi_\varepsilon=\lnot\avoid'\;\mathcal{U}\;\goal'$ with $\avoid'=\avoid'\oplus\ball_\varepsilon(0)$ and $\goal'=\goal\ominus\ball_\varepsilon(0)$, where $\oplus$ and $\ominus$ denote the Minkowski addition and diffrence, respectively. %Given a sampled-time abstraction product control system $\Sigma^\times_\tau$ and reach-avoid specification $\Phi$ defined over $X^\times$, we will say that decentralized open-
 %loop (decentralized closed-loop) realizes $\Phi$ if every trajectory of $C\colon [0;T]\to U$ ($C\parallel\Sigma_\tau$) satisfies $\Phi$.
 
-%We say that the product control system controlled with the open $\Sigma^\times$ satisfies a reach-avoid specification $\Phi$ if 
-
-We want to synthesize \emph{local} feedback controllers for each agent so that a global reach-avoid specification, defined on the state space of the product control system, is fulfilled.
+We want to synthesize \emph{local} feedback controllers for each agent so that a global reach-avoid specification, defined on the state space of the product control system, is fulfilled under the worst-case disturbance.
 Concretely, we want to develop an algorithm with the following input and output:
 \begin{description}
-	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, a sampling time $\tau >0$, a robustness margin $\varepsilon$ and an $\varepsilon$-robust version of a reach-avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ (denoted by $\Phi_\varepsilon$)% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
+	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, a sampling time $\tau >0$, a robustness margin $\varepsilon$ and an $\varepsilon$-robust version of a reach-avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ (denoted by $\Phi_\varepsilon$).% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
 	\item[Output:] A set of local feedback controllers $\set{C^i}_{i\in [1;N]}$ of $\set{\Sigma^i_\tau}_{i\in [1;N]}$ so that $\set{C^i}_{i\in [1;N]}\parallel \set{\Sigma_\tau^i}_{i\in [1;N]}$ realizes $\Phi$. 
 \end{description}
+
+It is important to notice that our solution must provide a formal guarantee: the reach-avoid specification $\Phi$ must be satisfied under the worst-case disturbance affecting the product system.
 
 Our choice of the specification $\Phi$ on the product state space $X^\times$ subsumes many interesting class of control tasks.
 For example, we can express situations when the robots have their own local reach-avoid specifications, and they need to avoid collision among each other; we consider such specification in some of our examples in Sec.~\ref{sec:local reach-avoid}.
