--- a/related_work.tex
+++ b/related_work.tex
@@ -4,7 +4,7 @@ We categorize the related work into (1) the ones which propose hierarchical cont
 
 \begin{enumerate}[(1)]
 	\item Recently, using hierarchical approach, that is combination of high-level planning and low-level tracking has gained especial attention. The existing methods can be categorized based on the dynamics that they can handle (e.g. nonlinear, perturbed, etc.), considered class of specifications and their scalability. A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and use
-	Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) method to obtain a low-level controller ensuring a bounded error between the two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust}. However, These mehods (SOS and HJ) are not easilly parallelizable and hence cannot gain scalability in the order that we do. To design low-level tracking controllers, we use ABCD for which there exists known parallelization schemes (\cite{KhaledZ19pfaces}). Furthermore, in contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require selecting a lower-domensional planning model that can be related to the full-order dynamics via a smartly chosen linear mapping. There are other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding}), disturbance-free (\cite{tedrake2010lqr,fan2020fast}) and finite transition systems (\cite{Yang2017milp}). In contrast, our method can support continuous time nonlinear dynamics and give guarantee against worst-case bounded disturbance.
+	Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) method to obtain a low-level controller ensuring a bounded error between the two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust}. However, These mehods (SOS and HJ) are not easilly parallelizable and hence are not scalabe. To design low-level tracking controllers, we use ABCD for which there exists known parallelization schemes (\cite{KhaledZ19pfaces}). Furthermore, in contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding a linear mapping between the low and high dimensional models. Furthermore, there are other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding}), disturbance-free (\cite{tedrake2010lqr,fan2020fast}) and finite transition systems (\cite{Yang2017milp}). In contrast, our method supports arbitrary continuous time nonlinear dynamics and gives guarantee against worst-case bounded disturbance.
 	
 	%The hierarchical approach, combining high-level planning and low-level tracking, is not new.
 	%Yet most of the existing works use the hierarchical approach for controller synthesis for a single robot \cite{herbert2017fastrack, fan2020fast, fan2018controller, wongpiromsarn2012receding, tedrake2010lqr, singh2018robust, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773, Yang2017milp}.
@@ -16,7 +16,7 @@ We categorize the related work into (1) the ones which propose hierarchical cont
 	Chen et al.\ proposed a method, using control barrier functions, that requires some form of inter-robot communication and does not consider external disturbances \cite{Chen2018cbf}.
 	Sahin et al.\ proposed a method that requires the group of robots to be homogeneous \cite{Shahin2017cltl}.
 	There are methods which do not consider external disturbances and do not provide formal guarantees \cite{jackson2020scalable}.
-	In contrast, our method can synthesize formally verified controllers for heterogeneous group of robots, subjected to external disturbances, and lacking any form of communications. There are other works that use a pre-defined motion primitive library to perform verified planning for multi-robot systems (\cite{saha2016implan,BanusicMPSZ19pgcd}). In contrast, our method deals with dynamical model of robots instead of using motion primitives which encapsulate the low-level control design. Therefore, our guarantees are stronger.
+	In contrast, our method can synthesize formally verified controllers for heterogeneous group of robots, subjected to external disturbances, and lacking any form of communications. There are other works that use a pre-defined motion primitive library to perform verified planning for multi-robot systems \cite{saha2016implan,BanusicMPSZ19pgcd}. In contrast, our method deals with dynamical model of robots instead of using motion primitives which encapsulate the low-level control design. %Therefore, our guarantees are stronger.
 	The closest related work that match our level of generality is the one by Bansal et al.\ \cite{bansal2017safe}.
 	However, they assume that each robot has got its own reach-avoid specification and they need to avoid collision with the other robots.
 	Whereas, we allow global reach-avoid specifications, which subsumes the specifications that they consider.
